--- a/index.html
+++ b/index.html
@@ -1,244 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Md Faizan Qureshi | Portfolio</title>
+    <title>Portfolio - Md. Faizan Qureshi</title>
     <link rel="stylesheet" href="styles.css">
-    <style>
-        /* Global Reset */
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        body {
-            font-family: 'Arial', sans-serif;
-            background-color: #f0f4f8;
-            color: #333;
-            transition: background-color 0.5s ease, color 0.5s ease;
-        }
-
-        h1, h2, h3, p {
-            margin: 20px 0;
-        }
-
-        a {
-            text-decoration: none;
-            color: #f39c12;
-            font-weight: bold;
-        }
-
-        button {
-            cursor: pointer;
-            background-color: #f39c12;
-            color: white;
-            border: none;
-            padding: 10px 20px;
-            font-size: 16px;
-            border-radius: 5px;
-            transition: transform 0.3s ease;
-        }
-
-        button:hover {
-            transform: scale(1.1);
-        }
-
-        section {
-            padding: 50px 0;
-            transition: opacity 1s ease-in-out;
-        }
-
-        .animate {
-            opacity: 1;
-            transform: translateY(0);
-        }
-
-        /* Hero Section */
-        .hero {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 80vh;
-            background-color: #2c3e50;
-            color: white;
-            text-align: center;
-            position: relative;
-            z-index: 1;
-        }
-
-        .hero h1 {
-            font-size: 3.5em;
-            letter-spacing: 2px;
-        }
-
-        .hero p {
-            font-size: 1.5em;
-            color: #f39c12;
-            animation: fadeInText 3s ease-in-out forwards;
-            opacity: 0;
-        }
-
-        @keyframes fadeInText {
-            0% { opacity: 0; }
-            100% { opacity: 1; }
-        }
-
-        .about, .resume, .work, .contact {
-            opacity: 0;
-            transform: translateY(50px);
-        }
-
-        /* Resume Button */
-        #resume-button {
-            margin-top: 30px;
-        }
-
-        /* Scroll-to-Top Button */
-        .scroll-top-button {
-            position: fixed;
-            bottom: 20px;
-            right: 20px;
-            padding: 10px;
-            font-size: 20px;
-            background-color: #f39c12;
-            color: #fff;
-            border: none;
-            border-radius: 50%;
-            cursor: pointer;
-            display: none;
-            transition: opacity 0.3s;
-        }
-
-        /* Work and Contact Section */
-        .work a, .contact a {
-            color: #f39c12;
-            font-size: 1.2em;
-        }
-
-        .work a:hover, .contact a:hover {
-            text-decoration: underline;
-        }
-    </style>
 </head>
+
 <body>
 
-<!-- Hero Section -->
-<section class="hero">
-    <div>
-        <h1>Md Faizan Qureshi</h1>
-        <p>2nd Year BSc CS Student | Tech Enthusiast | AI & Crypto Buff</p>
-    </div>
-</section>
+    <header>
+        <div class="hero">
+            <h1>Md. Faizan Qureshi</h1>
+            <p>2nd Year BSc CS Student | Tech Enthusiast | Entrepreneur | AI & Crypto Buff</p>
+        </div>
+    </header>
 
-<!-- About Me Section -->
-<section class="about">
-    <h2>About Me</h2>
-    <p>
-        Hi there! I'm Md Faizan Qureshi, an enthusiastic tech lover from India, currently pursuing a BSc in Computer Science. My passion lies in exploring the latest advancements in artificial intelligence, cryptocurrencies, and fitness technologies. Along with being an avid gamer, I enjoy staying fit and maintaining a healthy lifestyle. I thrive on learning and sharing knowledge, whether it's diving deep into AI, discussing future technologies, or having stimulating conversations with new people. I'm always on the lookout for opportunities to work on exciting projects that combine tech, business, and innovation. Let's connect and build something amazing together!
-    </p>
-</section>
+    <section class="about section">
+        <h2>About Me</h2>
+        <p>I'm a passionate second-year BSc CS student with a deep interest in AI, gaming, tech products, and everything related to technology. I'm also fascinated by entrepreneurship, edutech, and the future of AI and crypto.</p>
+    </section>
 
-<!-- Resume Section -->
-<section class="resume">
-    <h2>Resume</h2>
-    <button id="resume-button" onclick="window.open('resume.pdf')">Download Resume</button>
-</section>
+    <section class="resume section">
+        <h2>Resume</h2>
+        <a href="resume.pdf" class="button">Download Resume</a>
+    </section>
 
-<!-- Work Section -->
-<section class="work">
-    <h2>My Work</h2>
-    <p>Check out my work and projects through the Google Drive link below:</p>
-    <a href="https://drive.google.com/drive/folders/1yAtYa5Rz4hkAfXKBQH4o-T8MXWjeRMU8?usp=sharing" target="_blank">View My Projects & Assignments</a>
-</section>
+    <section class="contact section">
+        <h2>Contact Me</h2>
+        <p>Connect with me on <a href="https://www.linkedin.com/in/md-faizan-qureshi-31098a252?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank">LinkedIn</a></p>
+        <p>Instagram: <a href="https://instagram.com/i_am_faizanqureshi" target="_blank">@i_am_faizanqureshi</a></p>
+        <p>X: <a href="https://twitter.com/MDFaizanQures11" target="_blank">@MDFaizanQures11</a></p>
+        <p>Reddit: <a href="https://www.reddit.com/u/i_am_faizanqureshi" target="_blank">@i_am_faizanqureshi</a></p>
+    </section>
 
-<!-- Contact Section -->
-<section class="contact">
-    <h2>Contact Me</h2>
-    <p>Feel free to connect with me via the following platforms:</p>
-    <ul>
-        <li><a href="https://www.linkedin.com/in/md-faizan-qureshi/" target="_blank">LinkedIn</a></li>
-        <li><a href="https://www.instagram.com/i_am_faizanqureshi/" target="_blank">Instagram</a></li>
-        <li><a href="https://x.com/MDFaizanQures11" target="_blank">X (formerly Twitter)</a></li>
-        <li><a href="https://www.reddit.com/user/i_am_faizanqureshi" target="_blank">Reddit</a></li>
-    </ul>
-</section>
+    <footer>
+        <p>&copy; 2025 Md. Faizan Qureshi. All rights reserved.</p>
+    </footer>
 
-<!-- Scroll-to-Top Button -->
-<button class="scroll-top-button" onclick="window.scrollTo({top: 0, behavior: 'smooth'})">↑</button>
-
-<script>
-// Smooth scrolling for anchor links
-document.querySelectorAll('a[href^="#"]').forEach(anchor => {
-    anchor.addEventListener('click', function (e) {
-        e.preventDefault();
-        document.querySelector(this.getAttribute('href')).scrollIntoView({
-            behavior: 'smooth'
-        });
-    });
-});
-
-// Scroll animations for sections
-const sections = document.querySelectorAll('.about, .resume, .work, .contact');
-const options = {
-    threshold: 0.5
-};
-
-const observer = new IntersectionObserver(function (entries, observer) {
-    entries.forEach(entry => {
-        if (entry.isIntersecting) {
-            entry.target.classList.add('animate');
-        } else {
-            entry.target.classList.remove('animate');
-        }
-    });
-}, options);
-
-sections.forEach(section => {
-    observer.observe(section);
-});
-
-// Scroll-to-top button visibility
-const scrollTopButton = document.querySelector('.scroll-top-button');
-window.onscroll = function () {
-    if (document.body.scrollTop > 100 || document.documentElement.scrollTop > 100) {
-        scrollTopButton.style.display = 'block';
-    } else {
-        scrollTopButton.style.display = 'none';
-    }
-};
-
-// Typewriter effect for the hero section
-const typewriter = document.querySelector('.hero p');
-let text = "2nd Year BSc CS Student | Tech Enthusiast | Entrepreneur | AI & Crypto Buff";
-let i = 0;
-
-function typeWriterEffect() {
-    if (i < text.length) {
-        typewriter.innerHTML += text.charAt(i);
-        i++;
-        setTimeout(typeWriterEffect, 100);
-    }
-}
-window.onload = typeWriterEffect;
-
-// Background color change based on time of day
-function changeBackgroundColorBasedOnTime() {
-    const hour = new Date().getHours();
-    const body = document.body;
-
-    if (hour >= 6 && hour < 18) {
-        body.style.backgroundColor = '#ecf0f1'; // Light background
-        body.style.color = '#2c3e50'; // Dark text
-    } else {
-        body.style.backgroundColor = '#2c3e50'; // Dark background
-        body.style.color = '#ecf0f1'; // Light text
-    }
-}
-changeBackgroundColorBasedOnTime();
-</script>
-
+    <script src="script.js"></script>
 </body>
+
 </html>
