--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
         <p>I'm a passionate second-year BSc CS student with a deep interest in AI, gaming, tech products, and everything related to technology. I'm also fascinated by entrepreneurship, edutech, and the future of AI and crypto.</p>
     </section>
 
+    <section class="my-work section">
+        <h2>My Work</h2>
+        <p>Take a look at some of my projects and AI-related work:</p>
+        <a href="https://drive.google.com/drive/folders/1yAtYa5Rz4hkAfXKBQH4o-T8MXWjeRMU8?usp=sharing" target="_blank" class="button">View My Work</a>
+    </section>
+
     <section class="resume section">
         <h2>Resume</h2>
         <a href="resume.pdf" class="button">Download Resume</a>
